# rust_test_task

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  configure.rs  error.rs  get.rs  lib.rs  main.rs  providers.rs
src/providers/: openweather.rs  weatherapi.rs
tests/: basic_flow.rs
