[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rstest = "0.16.0"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
reqwest = {version = "0.11.14", features = ["json"]}
tokio = { version = "1.26.0", features = ["full"] }
thiserror = "1.0.39"
serde = {version = "1.0.155", features = ["derive"]}
async-trait = "0.1.66"

[lib]
name = "weather_lib"
path = "src/lib.rs"

[[bin]]
name = "weather"
path = "src/bin/main.rs"
